# community-annotation

./: ANNOTATION_FORMAT.md  CLAUDE.md  README.md  fanconi_anemia.hpoa.tsv  fanconi_anemia_complementation_group_d2.annotations.yaml  hpo-annotation-format-extended.md  hypermobile_ehlers_danlos_syndrome.annotations.yaml  mass_syndrome.annotations.yaml  pyproject.toml  retrograde_cricopharyngeal_dysfunction.annotations.yaml  semicircular_canal_dehiscence_syndrome.annotations.yaml  semicircular_canal_dehiscence_syndrome.hpoa.tsv
.claude/: settings.json
.claude_code/: mcp_settings.json
.github/workflows/: claude-code-review.yml  claude.yml
src/annotation_validator/: __init__.py  cli.py  fetcher.py  mcp_server.py  simple_aurelian_mcp.py  validator.py
